--- a/stats/templates/stats/base.html
+++ b/stats/templates/stats/base.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'player_batting_stats' player_name='player_name' %}">Baseball Stats</a></li>
-        <li><a href="{% url 'get_data' searchterm='searchterm' %}">Sold Details</a></li>
+        <li><a href="{% url 'get_sold' searchterm='searchterm' %}">Sold Details</a></li>
         <li><a href="{% url 'current' searchterm='searchterm' %}">Current Prices</a></li>
         <li><a href="{% url 'headlines' searchterm='searchterm' %}">Headlines</a></li>
       </ul>
